Style: Updated multiple CSS elements. - Changed the value of padding and margin in multiple files to fix some layout problems - Removed the underline from all links in the footer file.
Files modifies:
- rc/App.css
- src/components/footer/Footer.css
- src/pages/category-page/CategoryPage.css
- src/pages/event-detail-page/EventDetailPage.css

Author: Bruno Silva
Date: Mon May 27 12:22:42 CEST 2024

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -2,7 +2,6 @@
   display:flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 150px;
   padding: 40px 60px;
   color: white;
   background-color: black;
@@ -23,6 +22,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 60px
 }
 
 .content-padding {
