--- a/src/pages/category-page/CategoryPage.css
+++ b/src/pages/category-page/CategoryPage.css
@@ -23,6 +23,7 @@
   padding: 20px;
   background: transparent; 
   margin: 0 auto; 
+  margin-bottom: 165px;
 }
 
 .event-card {
