--- a/src/pages/event-detail-page/EventDetailPage.css
+++ b/src/pages/event-detail-page/EventDetailPage.css
@@ -1,10 +1,10 @@
 .event-detail-container {
   position: relative;
-  height: 100vh;
+  height: 150vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 40px;
+  padding: 0 40px 165px;
   overflow: hidden;
 }
 
@@ -15,7 +15,7 @@
   right: 0;
   bottom: 0;
   background-size: cover;
-  background-position: center;
+  background-position: center;  
   filter: blur(8px);
   z-index: -2;
 }
